# aybMovieDesk

./: README.md
Desktop/OrganizedAybApp/: CMakeLists.txt  CMakeLists.txt.user.uiunLz  admincmd.cpp.sPRAIv  win2.qmodel
Desktop/OrganizedAybApp/Headers/: addfilm.h  admin.h  admincmd.h  admininter.h  client.h  clientinter.h  createres.h  delres.h  field.h  mainwindow.h  modifyfilm.h  name.h  period.h  reqdel.h  seanceaffich.h  viewfilms.h  viewres.h
Desktop/OrganizedAybApp/UI/: addfilm.ui  admin.ui  admincmd.ui  admininter.ui  clientinter.ui  createres.ui  delres.ui  field.ui  mainwindow.ui  modifyfilm.ui  name.ui  period.ui  reqdel.ui  seanceaffich.ui  viewfilms.ui  viewres.ui
Desktop/OrganizedAybApp/src/: addfilm.cpp  admin.cpp  admincmd.cpp  admininter.cpp  client.cpp  clientinter.cpp  createres.cpp  delres.cpp  field.cpp  main.cpp  mainwindow.cpp  modifyfilm.cpp  name.cpp  period.cpp  reqdel.cpp  viewfilms.cpp  viewres.cpp
